Added JournalController.java to act as the bridge between the outside world and my java logic. Migrated to Spring Boot Rest API and reorganized package structure.